Add links to demos

--- a/Demo/webgl/index.html
+++ b/Demo/webgl/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | shader-tut</title>
+    <title>Demo for How to Use a Shader to Dynamically Swap a Sprite's Colors</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
   <body class="template">
-    <p class="header"><span>Unity WebGL Player | </span>shader-tut</p>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="http://tutsplus.github.io/github-analytics/ga-tracking.min.js"></script>
+    <p class="header">Demo for <a href="http://gamedevelopment.tutsplus.com/tutorials/how-to-use-a-shader-to-dynamically-swap-a-sprites-colors--cms-25129">How to Use a Shader to Dynamically Swap a Sprite's Colors</a></p>
     <div class="template-wrap clear">
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="480px" width="600px"></canvas>
       <div class="logo"></div>
       <div class="fullscreen"><img src="TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
-      <div class="title">shader-tut</div>
+      <div class="title">Demo for <a href="http://gamedevelopment.tutsplus.com/tutorials/how-to-use-a-shader-to-dynamically-swap-a-sprites-colors--cms-25129">How to Use a Shader to Dynamically Swap a Sprite's Colors</a></div>
     </div>
     <p class="footer">&laquo; created with <a href="http://unity3d.com/" title="Go to unity3d.com">Unity</a> &raquo;</p>
     <script type='text/javascript'>
