--- a/Demo/webplayer/webplayer.html
+++ b/Demo/webplayer/webplayer.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Unity Web Player | shader-tut</title>
+		<title>Demo for How to Use a Shader to Dynamically Swap a Sprite's Colors</title>
 		<script type='text/javascript' src='https://ssl-webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/jquery.min.js'></script>
 		<script type="text/javascript">
 		<!--
@@ -116,7 +116,9 @@
 		</style>
 	</head>
 	<body>
-		<p class="header"><span>Unity Web Player | </span>shader-tut</p>
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+		<script src="http://tutsplus.github.io/github-analytics/ga-tracking.min.js"></script>
+		<p class="header">Demo for <a href="http://gamedevelopment.tutsplus.com/tutorials/how-to-use-a-shader-to-dynamically-swap-a-sprites-colors--cms-25129">How to Use a Shader to Dynamically Swap a Sprite's Colors</a></p>
 		<div class="content">
 			<div id="unityPlayer">
 				<div class="missing">
@@ -131,6 +133,7 @@
 				</div>
 			</div>
 		</div>
+		<p class="header">If the above demo doesn't work, <a href="http://tutsplus.github.io/Dynamic-Sprite-Color-Swap-Shader/Demo/webgl/index.html">try the WebGL version</a> (25MB).</p>
 		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
 	</body>
 </html>
